<resources>
    <string name="app_name">StockViewer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updated_long_ago">Updated long ago</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="find_company_or_ticker">Find company or ticker</string>
    <string name="popular_requests">Popular requests</string>
    <string name="day_short">D</string>
    <string name="week_short">W</string>
    <string name="month_short">M</string>
    <string name="half_year_short">6M</string>
    <string name="year_short">1Y</string>
    <string name="all">All</string>
    <string name="retry">Retry</string>
    <string name="message_unstable_internet">Internet connection is unstable, please try later</string>
    <string name="news_and_price_aggregation">About news and stock prices aggregation</string>
    <string name="general_information">General information</string>
    <string name="application_info">Application info</string>
    <string name="news_publisher_contact_information">News publisher contact information</string>
    <string name="news_publisher_contact_text">This application uses finnhub.io stock market api to provide news.
        According to Google Play news policy, news publisher contact information should be provided by the application</string>
    <string name="contact_information">Contact information</string>
    <string name="finnhub_tech_support_contact">Technical support: support@finnhub.io</string>
    <string name="finnhub_website_contact">Finnhub website: https://finnhub.io</string>


    <array name="main_page_tab_titles">
        <item>Stocks</item>
        <item>Favourites</item>
    </array>

    <array name="stock_detail_tab_titles">
        <item>Chart</item>
        <item>Summary</item>
        <item>News</item>
    </array>
</resources>