<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StockDetailFragment">

    <TextView
        android:id="@+id/stockChartCurrentPriceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="$131.93"
        android:textColor="?attr/colorSecondary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stockChartPriceChangeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+0.12(1,15%)"
        app:layout_constraintEnd_toEndOf="@id/stockChartCurrentPriceTextView"
        app:layout_constraintStart_toStartOf="@id/stockChartCurrentPriceTextView"
        app:layout_constraintTop_toBottomOf="@id/stockChartCurrentPriceTextView" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockChartPriceChangeTextView" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/stockDetailChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stockChartPriceChangeTextView">

    </com.github.mikephil.charting.charts.LineChart>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="10dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartDayButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:checkable="true"
                android:checked="true"
                android:text="@string/day_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartWeekButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/week_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartMonthButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/month_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartHalfYearButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/half_year_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartYearButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:text="@string/year_short" />

            <com.google.android.material.chip.Chip
                android:id="@+id/stockChartAllButton"
                style="@style/StockChartChipStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checkable="true"
                android:text="@string/all" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>