<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsFragmentToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:drawablePadding="4dp"
        android:text="@string/general_information"
        android:theme="@style/SettingsMenuTitleTextAppearance"
        app:drawableStartCompat="@drawable/ic_round_info_24"
        app:drawableTint="?colorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintStart_toStartOf="@+id/materialCardView" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/colorPrimary"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dataAggregationTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:text="@string/news_and_price_aggregation"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="?colorPrimaryVariant" />

            <TextView
                android:id="@+id/applicationInfoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:text="@string/application_info"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="16sp" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>